Update website contents

--- a/index.html
+++ b/index.html
@@ -35,59 +35,61 @@
     <!-- </nav> -->
 
     <div id="intro-container">
+
       <h1>Welcome</h1>
-      <p class="welcome-p">
-        Hello, I'm Jake Zaia, welcome to my personal website. You can use the following links to find my <a href="static/resume/resume.pdf">resume</a>, <a href="https://github.com/jzaia18/Major-Projects">portfolio</a>, and the <a href="https://github.com/jzaia18/Gumshoe-Website">source code for this website</a> (licensed under GPLv2). If you're looking for more information about who I am and what I do, keep reading to the sections below. If you're looking to get in contact with me and you want to ask me some questions or schedule a time to chat, please email me at one of the <a href="#contact-section">email addresses listed below</a> or connect with me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a>.
-      </p>
-
-      <br />
-
-      <h1 id="about-section">About Me</h1>
       <div id="about-me-split" class="row">
 
-        <div class="col-xl-2 col-lg-3 col-md-12" style="text-align: center">
+        <div class="col-lg-9 col-md-12">
+          <p class="welcome-p">
+            Hello, I'm Jake Zaia.
+            Welcome to my personal website.
+            You can use the following links to find my <a href="static/resume/resume.pdf">resume</a>, <a href="https://github.com/jzaia18/Major-Projects">portfolio</a>, and the <a href="https://github.com/jzaia18/Gumshoe-Website">source code for this website</a> (licensed under GPLv2). If you're looking for more information about who I am and what I do, keep reading to the sections below.
+            This static web-page is being hosted via <a href="https://mailinabox.email">Mail-in-a-box</a> though I rarely check the email address associated with this server.
+          </p>
+          <p class="welcome-p">
+            I am currently looking for work, particularly in quantum computing research.
+            If you're a research lab who has somehow found this website, please don't hesitate to reach out.
+            My main areas of interest are in accelerating practical uses of quantum computers through library development, tooling, and quantum error correction.
+            I am a software engineer by trade, and thrive at making tools for other software engineers to tinker with.
+          </p>
+          <p class="welcome-p">
+            If you're looking to get in contact with me and you want to ask me some questions or schedule a time to chat, please email me at one of the <a href="#contact-section">email addresses listed below</a> or connect with me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a>.
+            Otherwise, if you found me from one of my projects, or from a community I'm a part of (such as <a href="https://reddit.com/r/QuantumComputing">r/QuantumComputing</a>), message me on github or in the relevant community and I'll respond as soon as I see it.
+          </p>
+        </div>
+
+        <div class="col-lg-3 col-md-12" style="text-align: center">
           <img src="static/img/linkedinpic.png" id="linkedin-pic" class="rounded-circle" alt="linkedin profile picture" />
         </div>
 
-        <div class="col-xl-10 col-lg-9 col-md-12">
-          <h4 id="education-section">Education</h4>
-          <p class="about-p">
-            I'm currently a graduate student at Carnegie Mellon University working towards a masters degree in theoretical computer science (MSCS) with a focus on quantum computing.
-            After I graduate, I plan to pursue a PhD with an emphasis on theoretical aspects of quantum computing, namely algorithm complexity, circuit optimization, and error correction.
-            Prior to coming to CMU, I graduated from the Rochester Institute of Technology (RIT) with a BS in computer science in 2023.
-            While there, I specialized in theoretical computer science and cybersecurity, and completed a triple minor in mathematics, quantum information science and technology, and computing security.
-          </p>
-
-          <h4 id="work-section">Work</h4>
-          <p class="about-p">
-            During my college career I have worked a series of internships spanning a wide breadth of computer science topics.
-            Most recently, I have worked at the <a href="https://www.sei.cmu.edu">Software Engineering Institute (SEI)</a> helping to conduct novel research in 2 separate roles.
-            My current role involves identifying and solving issues with creating fault-tolerant quantum systems, and a prior role involved analysis of data compression.
-            I have also worked for <a href="https://mitre.org">MITRE</a> in both a development and research capacity.
-            My research was involved in symbolic manipulation of qubit states, whereas my development roles were mostly associated with an internal resource management research project and the F-35 project.
-            Earlier in my career, I worked for <a href="https://www.herricktechlabs.com">HTL</a>, as an embedded software developer working on software defined radio systems, and for <a href="https://www.morganstanley.com">Morgan Stanley</a> as a web developer for an internal website.
-            I'm always open to explore new opportunities to grow more as a developer.
-            For a more detailed list of everything I've worked on, please see <a href="static/resume/resume.pdf">my resume</a>.
-          </p>
-
-        </div>
       </div>
 
-      <h4 id="foss-section">FOSS Endeavors</h4>
+      <br />
+
+      <h1 id="about-section">About</h1>
+
+      <h2 id="education-section">Education</h2>
+
+      <h3 id="education-section">My Education</h3>
       <p class="about-p">
-        This website, in addition to being open source itself, is being hosted through <a href="https://mailinabox.email">Mail-in-a-box</a>, which is an open source implementation of a mail, file storage, and HTTP server.
-        I am an active participant in and proponent of the free and open source community throughout the internet, my community, and especially at RIT, where I served as secretary and then president of the <a href="https://ritlug.com">RIT Linux User's Group</a>.
-        I love linux-y things, and encourage wider adoption of Linux for both technical and ethical reasons wherever I can.
-        In addition, I am a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and contributor to the Rockstar Language project and community.
-      </p>
-      <p class="about-p">
-        Moreover, I am a frequent attendee of hackathons, and have attended well over 20 across the state of New York and the surrounding area.
-        My teams and I always enjoy working hard to produce something interesting, whether it be for the betterment of society or just to make something fun.
-        For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my portfolio</a>, which lists many of my hackathon, personal, and school projects.
-        I have also mentored hackathons on occasion and provided administrative and technical knowledge to participants and organizers.
+        I will be graduating from Carnegie Mellon University (CMU) with a masters degree in computer science (MSCS) in December 2024.
+        My main area of study was theoretical computer science with a focus on quantum computing.
+        <!-- Eventually, I plan to pursue a PhD with an emphasis on theoretical aspects of quantum computing, namely algorithm complexity, circuit optimization, and error correction. -->
+        Prior to coming to CMU, I graduated from the Rochester Institute of Technology (RIT) with a BS in computer science in 2023.
+        While there, I specialized in theoretical computer science and cybersecurity, and completed a triple minor in mathematics, quantum information science and technology, and computing security.
+        Fun fact: I was the first ever person to graduate RIT with the quantum information science and technology minor, since it was first offered the year of my graduation.
       </p>
 
-      <h4 id="tutoring-section">Tutoring</h4>
+      <h3 id="teaching-section">Teaching</h3>
+      <p class="about-p">
+        For the fall semester of 2024 I am designing and running a <a href="https://www.cmu.edu/stuco">StuCo</a> at Carnegie Mellon.
+        This 3 unit (1 credit) course called <a href="https://intuitiveqcomp.jzaia.net">Intuitive Quantum Computing</a> aims to bring quantum computing concepts to an undergradutate level.
+        The goal is to break down concepts into a simple digestible form for a more thorough understanding that does not rely on the mindset of "shut up and calculate".
+        The focus is on the computational aspects of quantum computing such as computational models, algorithms, complexity theory, and cryptography.
+        This course is targeted at students with a moderate computer science background, particularly students in their 2nd to 3rd year of a computer science or related bachelors degree.
+      </p>
+
+      <h3 id="tutoring-section">Tutoring</h3>
       <p class="about-p">
         I am a lifelong teacher and tutor.
         I started my tutoring career as a volunteer in high school, and continued into the private sector in college via <a href="https://www.wyzant.com/Tutors/JakeZCSTutoring">Wyzant</a>.
@@ -96,14 +98,52 @@
         This experience spans various programming languages and paradigms, and covers fields from computing fundamentals to object oriented languages to operating systems, pure theory, embedded development, algorithm optimization and computer graphics.
       </p>
 
+      <h3 id="tutoring-section">Communities</h3>
+      <p class="about-p">
+        I am a moderator over at <a href="https://reddit.com/r/QuantumComputing">r/QuantumComputing</a> where I help remove bot &amp; spam posts and ensure discussions are high quality.
+        I am also a <a href="https://en.wikipedia.org/wiki/User:Jzaia">Wikipedia contributor</a>, helping share knowledge with the world, primarily for quantum computing topics.
+      </p>
+
+      <h2 id="work-section">Work</h2>
+      <p class="about-p">
+        During my college career I have worked a series of internships spanning a wide breadth of computer science topics.
+        Most recently, I have worked at the <a href="https://www.sei.cmu.edu">Software Engineering Institute (SEI)</a> helping to conduct novel research in several roles.
+        My current role involves identifying and solving issues with creating fault-tolerant quantum systems, and prior roles have involved analysis of data compression and creating test environments for ML-enabled security systems.
+        I have also worked for <a href="https://mitre.org">MITRE</a> in both a development and research capacity.
+        My research was involved in symbolic manipulation of qubit states, whereas my development roles were mostly associated with an internal resource management research project and the F-35 project.
+        Earlier in my career, I worked for <a href="https://www.herricktechlabs.com">Herrick Technology Labs</a>, as an embedded software developer working on software defined radio systems, and for <a href="https://www.morganstanley.com">Morgan Stanley</a> as a web developer for an internal website.
+        I'm always open to explore new opportunities to grow more as a developer.
+      </p>
+      <p class="about-p">
+        For a more detailed list of everything I've worked on, please see <a href="static/resume/resume.pdf">my resume</a>.
+      </p>
+
+
+      <h2 id="foss-section">FOSS Endeavors</h2>
+      <h3 id="tutoring-section">FOSS & Linux</h3>
+      <p class="about-p">
+        This website, in addition to being open source itself, is being hosted through <a href="https://mailinabox.email">Mail-in-a-box</a>, which is an open source implementation of a mail, file storage, and HTTP server.
+        I am an active participant in and proponent of the free and open source community throughout the internet, my community, and especially at RIT, where I served as secretary and then president of the <a href="https://ritlug.com">RIT Linux User's Group</a>.
+        I love linux-y things, and encourage wider adoption of Linux for both technical and ethical reasons wherever I can.
+      </p>
+
+      <h3 id="tutoring-section">Hackathons</h3>
+      <p class="about-p">
+        Moreover, I am a frequent attendee of hackathons, and have attended well over 20 across the state of New York and the surrounding area.
+        My teams and I always enjoy working hard to produce something interesting, whether it be for the betterment of society or just to make something fun.
+        For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my portfolio</a>, which lists many of my hackathon, personal, and school projects.
+        I have also mentored hackathons on occasion and provided administrative and technical knowledge to participants and organizers.
+        In addition, I am a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and contributor to the Rockstar Language project and community.
+      </p>
+
       <br />
 
       <h1 id="contact-section">Contact</h1>
       <p>
         Feel free to reach out to me at one of the following emails:
         <ul>
-          <li> <a href="mailto:&#106;&#097;&#107;&#101;&#122;&#097;&#105;&#097;&#048;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#106;&#097;&#107;&#101;&#122;&#097;&#105;&#097;&#048;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a> for business inquiries</li>
-          <li> <a href='m&#97;&#105;lto&#58;jza%69a&#64;a%6Edre&#119;%2E&#99;m&#117;&#46;%65du'>jzaia&#64;and&#114;&#101;w&#46;cm&#117;&#46;edu</a> for academic opportunities and inquiries</li>
+          <li> &#106;&#097;&#107;&#101;&#122;&#097;&#105;&#097;&#048;&#048; {AT} &#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109; for business inquiries</li>
+          <li> jzaia {AT} cm&#117;&#46;edu for academic opportunities and inquiries</li>
         </ul>
 
         Alternatively, feel free to connect with me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a> and send me a message there.
