Minor wording changes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             I am a software engineer by trade, and thrive at making tools for other software engineers to tinker with.
           </p>
           <p class="welcome-p">
-            If you're looking to get in contact with me and you want to ask me some questions or schedule a time to chat, please email me at one of the <a href="#contact-section">email addresses listed below</a> or connect with me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a>.
+            If you're looking to get in contact with me and you want to ask me some questions or schedule a time to chat, please email me at one of the <a href="#contact-section">email addresses listed below</a> or connect with me on <a href="https://linkedin.com/in/jake-zaia">LinkedIn</a>.
             Otherwise, if you found me from one of my projects, or from a community I'm a part of (such as <a href="https://reddit.com/r/QuantumComputing">r/QuantumComputing</a>), message me on github or in the relevant community and I'll respond as soon as I see it.
           </p>
         </div>
@@ -72,8 +72,8 @@
 
       <h3 id="education-section">My Education</h3>
       <p class="about-p">
-        I will be graduating from Carnegie Mellon University (CMU) with a masters degree in computer science (MSCS) in December 2024.
-        My main area of study was theoretical computer science with a focus on quantum computing.
+        I will be graduating from Carnegie Mellon University (CMU) with a master's degree in computer science (MSCS) in December 2024.
+        My main area of study is theoretical computer science with a focus on quantum computing.
         <!-- Eventually, I plan to pursue a PhD with an emphasis on theoretical aspects of quantum computing, namely algorithm complexity, circuit optimization, and error correction. -->
         Prior to coming to CMU, I graduated from the Rochester Institute of Technology (RIT) with a BS in computer science in 2023.
         While there, I specialized in theoretical computer science and cybersecurity, and completed a triple minor in mathematics, quantum information science and technology, and computing security.
@@ -86,7 +86,7 @@
         This 3 unit (1 credit) course called <a href="https://intuitiveqcomp.jzaia.net">Intuitive Quantum Computing</a> aims to bring quantum computing concepts to an undergradutate level.
         The goal is to break down concepts into a simple digestible form for a more thorough understanding that does not rely on the mindset of "shut up and calculate".
         The focus is on the computational aspects of quantum computing such as computational models, algorithms, complexity theory, and cryptography.
-        This course is targeted at students with a moderate computer science background, particularly students in their 2nd to 3rd year of a computer science or related bachelors degree.
+        This course is targeted at students with a moderate computer science background, particularly students in their 2nd to 3rd year of a computer science or related bachelor's degree.
       </p>
 
       <h3 id="tutoring-section">Tutoring</h3>
@@ -108,7 +108,8 @@
       <p class="about-p">
         During my college career I have worked a series of internships spanning a wide breadth of computer science topics.
         Most recently, I have worked at the <a href="https://www.sei.cmu.edu">Software Engineering Institute (SEI)</a> helping to conduct novel research in several roles.
-        My current role involves identifying and solving issues with creating fault-tolerant quantum systems, and prior roles have involved analysis of data compression and creating test environments for ML-enabled security systems.
+        My current role involves identifying and solving issues with creating fault-tolerant quantum systems.
+        Prior roles have involved analysis of data compression and creating test environments for ML-enabled security systems.
         I have also worked for <a href="https://mitre.org">MITRE</a> in both a development and research capacity.
         My research was involved in symbolic manipulation of qubit states, whereas my development roles were mostly associated with an internal resource management research project and the F-35 project.
         Earlier in my career, I worked for <a href="https://www.herricktechlabs.com">Herrick Technology Labs</a>, as an embedded software developer working on software defined radio systems, and for <a href="https://www.morganstanley.com">Morgan Stanley</a> as a web developer for an internal website.
@@ -119,7 +120,7 @@
       </p>
 
 
-      <h2 id="foss-section">FOSS Endeavors</h2>
+      <h2 id="foss-section">Free & Open Source Software (FOSS) Endeavors</h2>
       <h3 id="tutoring-section">FOSS & Linux</h3>
       <p class="about-p">
         This website, in addition to being open source itself, is being hosted through <a href="https://mailinabox.email">Mail-in-a-box</a>, which is an open source implementation of a mail, file storage, and HTTP server.
@@ -146,7 +147,7 @@
           <li> jzaia {AT} cm&#117;&#46;edu for academic opportunities and inquiries</li>
         </ul>
 
-        Alternatively, feel free to connect with me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a> and send me a message there.
+        Alternatively, feel free to connect with me on <a href="https://linkedin.com/in/jake-zaia">LinkedIn</a> and send me a message there.
       </p>
     </div>
   </body>
