Update info to reflect new job at Xanadu, graduation

--- a/index.html
+++ b/index.html
@@ -44,17 +44,19 @@
 
         <div class="col-lg-9 col-md-12">
           <p class="welcome-p">
-            Hello, I'm Jake Zaia.
+            Hello, I'm <i><b>Jake Zaia</b></i>.
             Welcome to my personal website.
             You can use the following links to find my <a href="static/resume/resume.pdf">resume</a>, <a href="https://github.com/jzaia18/Major-Projects">portfolio</a>, and the <a href="https://github.com/jzaia18/Gumshoe-Website">source code for this website</a> (licensed under GPLv2). If you're looking for more information about who I am and what I do, keep reading to the sections below.
-            This static web-page is being hosted via <a href="https://mailinabox.email">Mail-in-a-box</a> though I rarely check the email address associated with this server.
+            This static web-page is being hosted via <a href="https://mailinabox.email">Mail-in-a-box</a>, though I rarely check the email address associated with this server.
           </p>
-          <p class="welcome-p">
-            I am currently looking for work, particularly in quantum computing research.
-            If you're a research lab who has somehow found this website, please don't hesitate to reach out.
-            My main areas of interest are in accelerating practical uses of quantum computers through library development, tooling, and quantum error correction.
-            I am a software engineer by trade, and thrive at making tools for other software engineers to tinker with.
-          </p>
+          <!--
+               <p class="welcome-p">
+               I am currently looking for work, particularly in quantum computing research.
+               If you're a research lab who has somehow found this website, please don't hesitate to reach out.
+               My main areas of interest are in accelerating practical uses of quantum computers through library development, tooling, and quantum error correction.
+               I am a software engineer by trade, and thrive at making tools for other software engineers to tinker with.
+               </p>
+          -->
           <p class="welcome-p">
             If you're looking to get in contact with me and you want to ask me some questions or schedule a time to chat, please email me at one of the <a href="#contact-section">email addresses listed below</a> or connect with me on <a href="https://linkedin.com/in/jake-zaia">LinkedIn</a>.
             Otherwise, if you found me from one of my projects, or from a community I'm a part of (such as <a href="https://reddit.com/r/QuantumComputing">r/QuantumComputing</a>), message me on github or in the relevant community and I'll respond as soon as I see it.
@@ -75,8 +77,8 @@
 
       <h3 id="education-section">My Education</h3>
       <p class="about-p">
-        I will be graduating from Carnegie Mellon University (CMU) with a master's degree in computer science (MSCS) in December 2024.
-        My main area of study is theoretical computer science with a focus on quantum computing.
+        Most recently, I received my Master's of Science in Computer Science (MSCS) from Carnegie Mellon University (CMU) in December 2024.
+        My main area of study was theoretical computer science with a focus on quantum computing.
         <!-- Eventually, I plan to pursue a PhD with an emphasis on theoretical aspects of quantum computing, namely algorithm complexity, circuit optimization, and error correction. -->
         Prior to coming to CMU, I graduated from the Rochester Institute of Technology (RIT) with a BS in computer science in 2023.
         While there, I specialized in theoretical computer science and cybersecurity, and completed a triple minor in mathematics, quantum information science and technology, and computing security.
@@ -85,11 +87,19 @@
 
       <h3 id="teaching-section">Teaching</h3>
       <p class="about-p">
-        For the fall semester of 2024 I am designing and running a <a href="https://www.cmu.edu/stuco">StuCo</a> at Carnegie Mellon.
-        This 3 unit (1 credit) course called <a href="https://intuitiveqcomp.jzaia.net">Intuitive Quantum Computing</a> aims to bring quantum computing concepts to an undergradutate level.
-        The goal is to break down concepts into a simple digestible form for a more thorough understanding that does not rely on the mindset of "shut up and calculate".
-        The focus is on the computational aspects of quantum computing such as computational models, algorithms, complexity theory, and cryptography.
-        This course is targeted at students with a moderate computer science background, particularly students in their 2nd to 3rd year of a computer science or related bachelor's degree.
+        In the fall semester of 2024 I designed and ran a <a href="https://www.cmu.edu/stuco">StuCo</a> at Carnegie Mellon.
+        This 3 unit (1 credit) course called <a href="https://intuitiveqcomp.jzaia.net">Intuitive Quantum Computing</a> aimed to bring quantum computing concepts to an undergradutate level.
+        The goal was to break down concepts into a simple digestible form for a more thorough understanding that does not rely on the mindset of "shut up and calculate".
+        The focus was on the computational aspects of quantum computing such as computational models, algorithms, complexity theory, and cryptography.
+        The content is targeted at students with a moderate computer science background, particularly students in their 2nd to 3rd year of a computer science or related bachelor's degree.
+      </p>
+      <p class="about-p">
+        The course ended up with a moderate class size of roughly 15 students.
+        Despite the course being brand new, course feedback was generally quite positive (after some adjustments early into the course).
+        The end-of-semester assessment showed that most students ended the course with a solid foundation of the principles of quantum computing.
+        Unfortunately, since I have graduated, it is unclear if someone else will be able to run this course at CMU in the future.
+        If you're interested in running this StuCo, please reach out.
+        The course content remains live at <a href="https://intuitiveqcomp.jzaia.net">intuitiveqcomp.jzaia.net</a>, where all lecture and supplemental material are publicly available.
       </p>
 
       <h3 id="tutoring-section">Tutoring</h3>
@@ -98,10 +108,15 @@
         I started my tutoring career as a volunteer in high school, and continued into the private sector in college via <a href="https://www.wyzant.com/Tutors/JakeZCSTutoring">Wyzant</a>.
         I love helping people learn and grow as I teach them computer science and mathematics in a way that's easy to understand.
         In total I have almost 10 years of tutoring experience in both computer science and mathematics, at the middle school, high school, college, and adult level and over 1,250 hours of experience on Wyzant alone.
-        This experience spans various programming languages and paradigms, and covers fields from computing fundamentals to object oriented languages to operating systems, pure theory, embedded development, algorithm optimization and computer graphics.
+        This experience spans various programming languages and paradigms, and covers fields from computing fundamentals to object oriented languages to operating systems, pure theory, embedded development, algorithm optimization and cybersecurity.
+
+        <br />
+        <br />
+
+        Please note that at the moment I am <b>not</b> taking on new tutoring clients.
       </p>
 
-      <h3 id="tutoring-section">Communities</h3>
+      <h3 id="communities-section">Communities</h3>
       <p class="about-p">
         I am a moderator over at <a href="https://reddit.com/r/QuantumComputing">r/QuantumComputing</a> where I help remove bot &amp; spam posts and ensure discussions are high quality.
         I am also a <a href="https://en.wikipedia.org/wiki/User:Jzaia">Wikipedia contributor</a>, helping share knowledge with the world, primarily for quantum computing topics.
@@ -109,10 +124,10 @@
 
       <h2 id="work-section">Work</h2>
       <p class="about-p">
+        I am currently a Quantum Software Developer at <a href="https://xanadu.ai">Xanadu</a>, where I aid the <a href="https://pennylane.ai">Pennylane</a> performance team in their effort to keep Pennylane fast and efficient.
         During my college career I have worked a series of internships spanning a wide breadth of computer science topics.
         Most recently, I have worked at the <a href="https://www.sei.cmu.edu">Software Engineering Institute (SEI)</a> helping to conduct novel research in several roles.
-        My current role involves identifying and solving issues with creating fault-tolerant quantum systems.
-        Prior roles have involved analysis of data compression and creating test environments for ML-enabled security systems.
+        Projects I worked on involved identifying and solving issues with creating fault-tolerant quantum systems, analysis of data compression schemes, and creating test environments for ML-enabled security systems.
         I have also worked for <a href="https://mitre.org">MITRE</a> in both a development and research capacity.
         My research was involved in symbolic manipulation of qubit states, whereas my development roles were mostly associated with an internal resource management research project and the F-35 project.
         Earlier in my career, I worked for <a href="https://www.herricktechlabs.com">Herrick Technology Labs</a>, as an embedded software developer working on software defined radio systems, and for <a href="https://www.morganstanley.com">Morgan Stanley</a> as a web developer for an internal website.
